# MADNet

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: config.yaml  config.yml
notebooks/: 00_dataset_parse.ipynb  01_create_image_manifest.ipynb  01_image_transform.ipynb  02_train_model.ipynb
scripts/: extract_lasher.sh
src/data_transform/: image_generation.py
src/madnet/: __init__.py  model.py
