[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "madnet"
version = "0.1.0"
description = "A multimodal dense correspondence model for cross-modal image alignment"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5",
    "Pillow>=12.2.0",
    "PyYAML>=6.0",
    "torch>=2.12",
    "torchvision>=0.27",
    "opencv-python>=4.13",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["madnet*"]

